# Career_Advisor

./: .env  .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.md
CareerGuide/: .env  requirements.txt  resume_analyzer_with_gemini.py
CareerGuide/jd/: UpdatedResumeDataSet.csv
src/: App.jsx
