[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.117.1",
    "google-generativeai>=0.8.5",
    "pandas>=2.3.2",
    "pymupdf>=1.26.4",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "uvicorn[standard]>=0.36.0",
]
